--- a/KosaESS/src/main/resources/templates/student_login.html
+++ b/KosaESS/src/main/resources/templates/student_login.html
@@ -13,7 +13,7 @@
 	<div class="container" style="float: none; margin: 0 auto;">
 		<div class="content" style="align-items: center; height: 100vh;">
 			<div class="login con" style="width: 40%;">
-				<form th:action="@{/login}" method="post" class="">
+				<form th:action="@{/student/login}" method="post" class="">
 					<div class="">
 						<label for="stdtEmail"></label> <input type="text"
 							name="stdtEmail" id="id" class="" placeholder="아이디(이메일)">
