--- a/KosaESS/src/main/resources/templates/student_notice_list.html
+++ b/KosaESS/src/main/resources/templates/student_notice_list.html
@@ -25,7 +25,7 @@
 					<tr th:each="postVO : ${postList}">
 						<td></td>
 						<td><a th:text="${postVO.postTitle}"
-							th:href="@{/notice/__${postVO.postId}__}">공지사항 제목</a></td>
+							th:href="@{/student/notice/__${postVO.postId}__}">공지사항 제목</a></td>
 						<td th:text="${postVO.rgstDd}">등록일자</td>
 						<td th:text="${postVO.postHit}">조회수</td>
 					</tr>
