--- a/KosaESS/src/main/resources/static/css/student_main.css
+++ b/KosaESS/src/main/resources/static/css/student_main.css
@@ -23,11 +23,15 @@ body {
 	margin-top: 100px;
 }
 
-.content {
+.maincontent {
 	display: flex;
 	justify-content: space-between;
 }
 
+.content{
+	display: flex;
+	justify-content: center;
+}
 .con {
 	background: #E7EFF3;
 	padding: 4%;
@@ -93,6 +97,7 @@ input::placeholder {
 .loginBtn {
 	background: #0E5881;
 	color: white;
+	
 }
 
 .submit {
