--- a/KosaESS/bin/src/main/resources/static/css/student_main.css
+++ b/KosaESS/bin/src/main/resources/static/css/student_main.css
@@ -5,12 +5,13 @@
 	flex-shrink: 0;
 	color: #0E5881;
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
+	margin: 30px 0;
 }
 
 .maintext h3 {
 	color: #6E9BB3;
-	font-size: 23px;
+	font-size: 18px;
 }
 
 body {
@@ -18,24 +19,23 @@ body {
 }
 
 .container {
+	padding: 0px 8%;
 	margin-top: 100px;
 }
 
 .content {
 	display: flex;
-	padding-left: 7%;
-	padding-right: 7%;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .con {
 	background: #E7EFF3;
-	padding: 5%;
+	padding: 4%;
 }
 
 h2 {
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
 	margin-top: 0px;
 	margin-bottom: 4%;
 }
@@ -57,26 +57,68 @@ table a:hover {
 hr {
 	border: 0px;
 	border-top: 5px solid #0E5881;
+	margin-bottom:2%;
 }
 
 table td {
 	font-size: 16px;
-	padding: 3px 0px;
-	font-weight: bold;
+	padding: 4px 0px;
+	font-weight: 500;
 	margin: 0px;
+}
+
+.login {
+	text-align: center;
 }
 
 .login a {
 	color: #0E5881;
+	margin: 5px 0px;
+}
+
+.login input {
+	padding: 15px;
+	margin: 5px 0;
+	border: 0;
+	width: 60%;
+	font-size: 15px;
+	font-weight: bold;
+	border-radius: 10px;
+}
+
+input::placeholder {
+	color: #0E5881;
+}
+
+.loginBtn {
+	background: #0E5881;
+	color: white;
+}
+
+.submit {
+	margin-top: 3%;
 }
 
 .my {
 	display: flex;
 	justify-content: space-evenly;
+	margin-top: 7%;
 }
 
 .box {
 	width: 30%;
-	padding: 2%;
+	padding: 3%;
 	border-style: solid;
+	font-size: 15px;
+}
+
+.box h3 {
+	margin: 5% 0px;
+}
+
+.box a {
+	font-size: 30px;
+	color: #0E5881;
+	text-decoration: none;
+	font-weight: bold;
 }
