--- a/KosaESS/src/main/resources/templates/manager/manager_class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/manager_class_list.html
@@ -61,8 +61,12 @@
 						</td>
 						<td style="width: 10%;">상태</td>
 						<td style="width: 50%;">
+							<span>
+								 <label th:text="전체"></label>
+								 <input type="checkbox" name="chk_status" checked="checked" value="CheckAllCodeName"><!-- ←←←←←← value 수정필요 -->
+							</span>
 							<span th:each="classCodeName:${classCodeNameList}" >
-								 <label th:text=${classCodeName.cmcdNm}></label>
+								 <label th:text="${classCodeName}"></label>
 								 <input type="checkbox" name="chk_status" checked="checked" value="${classCodeName.cmcdId}">
 							</span>
 						</td>
@@ -90,7 +94,7 @@
 
 			<table id="class_list_table">
 				<tr>
-					<th><input type="checkbox" name="chk" id="chkAll"></th>
+					<th th:if="${session.role == 'admin'}"><input type="checkbox" name="chk" id="chkAll"></th>
 					<th th:if="${session.role != 'admin'}">번호</th>
 					<th th:if="${session.role == 'admin'}">ID</th>
 					<th>프로그램명</th>
@@ -100,8 +104,8 @@
 					<th>수강/정원</th>
 					<th>교육상태</th>
 				</tr>
-				<tr id="class_list" th:each="class:${classList}">
-					<td><input type="checkbox" name="chk" th:value="${class.clssId}"></td>
+				<tr id="class_list" th:each="class:${classList}" >
+					<td th:if="${session.role == 'admin'}"><input type="checkbox" name="chk" th:value="${class.clssId}"></td>
 					<td th:if="${session.role != 'admin'}" th:text="${classStat.count}">row number</td>
 					<td th:if="${session.role == 'admin'}" th:text="${class.clssId}"></td>
 					<td><a th:text="${class.clssNm}" th:href="@{/manager/class/__${class.clssId}__}"></a></td>
@@ -190,7 +194,6 @@
 		            }
 		           
 		            classListTable.innerHTML=classListCode;
-// 		            th:text="${#strings.substring(reviewDTO.content, 0, 5)}"
                 },
 				error: function(error){
 					console.log("error: ", error);
