--- a/KosaESS/src/main/resources/static/css/student/class_list.css
+++ b/KosaESS/src/main/resources/static/css/student/class_list.css
@@ -4,7 +4,6 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	justify-content: space-between;
 }
 
 ul {
@@ -42,18 +41,34 @@ input::placeholder {
 	justify-content: space-between;
 }
 
-.gridlist ul {
-	border: solid;
-	padding: 0px 2%;
-	height: 300px;
-	width: 280px;
-	text-align: center;
+tr {
+	display: grid;
+	align-items: center;
+	width: 21%;
+	border: 2px solid #0E5881;
+	padding: 1%;
+	margin-bottom: 3%;
 }
 
-.gridlist img {
+tbody {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+table img {
 	height: 60px;
 	width: 260px;
-	margin: 15% 0px;
+	margin: 5% 0px;
+}
+
+table td {
+	padding: 0.5%;
+	font-size: 12px;
+}
+
+table a {
+	text-align: center;
 }
 
 .classImg {
@@ -77,30 +92,15 @@ input::placeholder {
 	color: #0E5881;
 }
 
-.modal {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: none;
-	background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal.show {
-	display: block;
-}
-
-.modal_body {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 500px;
-	height: 600px;
-	padding: 40px;
-	text-align: center;
-	background-color: rgb(255, 255, 255);
+button {
+	background: #0E5881;
+	color: white;
+	padding: 10px;
+	margin: 5px 0;
+	border: 0;
+	width: 20%;
+	font-size: 10px;
+	font-weight: bold;
 	border-radius: 10px;
-	box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
-	transform: translateX(-50%) translateY(-50%);
+	width: 100%;
 }
